--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -23,39 +23,41 @@
     ]
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.18",
-    "@reown/appkit": "^1.0.7",
-    "@reown/appkit-adapter-wagmi": "^1.0.7",
-    "@tanstack/react-query": "^5.59.3",
-    "dayjs": "^1.11.10",
-    "iron-session": "^6.3.1",
-    "next": "^14.1.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
-    "react-toastify": "^10.0.5",
+    "@heroicons/react": "^2.1.5",
+    "@reown/appkit": "^1.3.2",
+    "@reown/appkit-adapter-ethers": "^1.3.2",
+    "@reown/appkit-adapter-wagmi": "^1.3.2",
+    "@tanstack/react-query": "^5.59.20",
+    "dayjs": "^1.11.13",
+    "ethers": "^6.13.4",
+    "iron-session": "^8.0.4",
+    "next": "^15.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.6",
     "siwe": "^2.3.2",
-    "viem": "^2.21.19",
-    "wagmi": "^2.12.17"
+    "viem": "^2.21.45",
+    "wagmi": "^2.12.32"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
-    "@tsconfig/next": "^2.0.0",
-    "@types/node": "^20",
+    "@tailwindcss/typography": "^0.5.15",
+    "@tsconfig/next": "^2.0.3",
+    "@types/node": "^22",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@wagmi/cli": "^2.1.16",
+    "@wagmi/cli": "^2.1.18",
     "autoprefixer": "^10",
-    "daisyui": "^4.12.10",
-    "eslint": "^8",
-    "eslint-config-next": "^14.1.4",
+    "daisyui": "^4.12.14",
+    "eslint": "^9",
+    "eslint-config-next": "^15.0.3",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
+    "eslint-plugin-prettier": "^5.2.1",
+    "husky": "^9.1.6",
+    "lint-staged": "^15.2.10",
     "postcss": "^8",
-    "prettier": "^3.0.3",
-    "tailwindcss": "^3.4.4",
+    "prettier": "^3.3.3",
+    "tailwindcss": "^3.4.14",
     "typescript": "^5"
   }
 }
